# transducer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
conf/: config.yaml  config_wav2vec2_large.yaml  config_wav2vec2_small.yaml  config_wav2vec2_small_triton.yaml
scratchpad/: bppt_rnnt.py  hf_dataset.py  nemo_demo.py  nemo_trace.py  parakeet_transcribe.py  train_tokenizer.py
tests/: benchmark_triton_rnnt.py  benchmark_triton_tdt.py  test_wav2vec2bert_encoder.py  test_wav2vec_encoder.py  train_tokenizer.py
transducer/: __init__.py  commons.py  config.py
transducer/commons/: __init__.py  config.py  encoder.py  feature_extractor.py  joiner.py  loss.py  modeling.py  predictor.py  processor.py  tokenizer.py  types.py
transducer/dataset/: __init__.py  base.py  config.py  hf_dataset.py  jsonl_dataset.py  lowercase_tokenizer.model  tokenization.py
transducer/decoder/: rnnt.py
transducer/encoder/: wav2vec.py  wav2vec2bert.py
transducer/kernels/: utils.py
transducer/losses/: __init__.py
transducer/models/: __init__.py  base.py  config.py  dawn.py  parakeet.py  sampler.py
transducer/processor/: __init__.py  nemo_feature_extractor.py  processor.py  tokenization.py  tokenizer.model
transducer/samplers/: __init__.py  base.py  beam_search.py  generation.py  greedy_search.py
transducer/train/: __init__.py  commons.py  config.py  run.py  train_module.py
wandb/: latest-run
wandb/offline-run-20251225_172258-9agj5esu/: run-9agj5esu.wandb
wandb/offline-run-20251225_172420-4cp9em25/: run-4cp9em25.wandb
wandb/offline-run-20251225_173146-6teh0z16/: run-6teh0z16.wandb
wandb/offline-run-20251225_174841-o3dydhay/: run-o3dydhay.wandb
wandb/offline-run-20251225_175213-bvuqj49w/: run-bvuqj49w.wandb
wandb/offline-run-20251225_175254-6lafty6s/: run-6lafty6s.wandb
wandb/offline-run-20251225_175943-jichcdve/: run-jichcdve.wandb
wandb/offline-run-20251225_180625-pcm22po0/: run-pcm22po0.wandb
wandb/offline-run-20251225_181153-2eaqhm7f/: run-2eaqhm7f.wandb
wandb/offline-run-20251225_181229-wrwadsqc/: run-wrwadsqc.wandb
wandb/offline-run-20251225_181538-6u8g5uw9/: run-6u8g5uw9.wandb
wandb/offline-run-20251225_181701-zb1d2afn/: run-zb1d2afn.wandb
wandb/offline-run-20251225_181937-ufh5c9gn/: run-ufh5c9gn.wandb
wandb/offline-run-20251225_182234-gba4ce1n/: run-gba4ce1n.wandb
wandb/offline-run-20251225_182332-ganscml5/: run-ganscml5.wandb
wandb/offline-run-20251225_182441-hggq5rcd/: run-hggq5rcd.wandb
wandb/offline-run-20251225_182752-itg5l90c/: run-itg5l90c.wandb
wandb/offline-run-20251225_183022-uarrh2x4/: run-uarrh2x4.wandb
wandb/offline-run-20251225_183242-rztq6fvo/: run-rztq6fvo.wandb
(+90 files in other folders)
