[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transducer"
version = "0.1.0"
description = "Transducer model experiments."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Odunola" }]
dependencies = [
  "transformers",
  "datasets",
  "triton>=3.5.1",
  "numba>=0.63.1",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "ruff",
  "isort",
]

[tool.hatch.build.targets.wheel]
packages = ["transducer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.isort]
profile = "black"
line_length = 100
