[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transducer"
version = "0.1.0"
description = "Transducer model experiments."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Odunola" }]
dependencies = [
  "transformers",
  "datasets",
  "jiwer>=3.0.4",
  "numba>=0.63.1",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
  "wandb>=0.16.0",
  "torch>=2.9.1",
  "pydantic>=2.12.5",
  "sentencepiece>=0.2.1",
  "torchcodec>=0.9.1",
  "torchaudio>=2.9.1",
  "kernels>=0.11.5",
  "librosa>=0.11.0",
  "pyyaml>=6.0.3",
  #"triton"
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "ruff",
  "isort",
]

[tool.hatch.build.targets.wheel]
packages = ["transducer"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
